--- a/ready-to-do/no-error.css
+++ b/ready-to-do/no-error.css
@@ -987,6 +987,7 @@ template {
 .cmp_table th {
  font-weight:700
 }
+/* ALTERA A COR DOS TÍTULOS DO VOLUME E AUTORIA DOS ARTIGOS */
 html,
 body {
  font-family:"Montserrat",-apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen-Sans","Ubuntu","Cantarell","Helvetica Neue",sans-serif;
@@ -998,6 +999,7 @@ body {
 a {
  color:#000
 }
+/* ALTERA A COR DOS TÍTULOS CLICÁVEIS QUANDO O MOURSE REPOUSA NO OBJETO */
 a:hover,
 a:focus {
  color:#fe473c
@@ -1391,6 +1393,7 @@ img {
   border-left:.357rem solid transparent;
   color:#4b7d92
  }
+ /* ALTERA A COR DE FUNDO QUANDO O MOUSE REPOUSA EM UM OBJETO DO SUBMENU */
  .pkp_nav_list ul a:hover,
  .pkp_nav_list ul a:focus {
   outline:0;
@@ -3422,6 +3425,7 @@ body.navIsOpen .siteHeader__navToggleIcon>span:last-child {
  font-size:1rem;
  line-height:1.43rem
 }
+/* ALTERA A COR DOS TÍTULOS DA BARRA LATERAL */
 .pkp_block .title {
  display:block;
  margin-bottom:.714rem;
@@ -3712,6 +3716,7 @@ body {
   right:150px
  }
 }
+/* ALTERA A COR DO BOTÃO QUANDO O MOUSE NÃO REPOUSA SOBRE O OBJETO */
 .cmp_manuscript_button,
 .block_make_submission a,
 .obj_galley_link {
@@ -3722,6 +3727,7 @@ body {
  color:rgba(240,240,240);
  border:none
 }
+/* ALTERA A COR DO BOTÃO DE RÓTULO DE FORMATO DOS ARTIGOS QUANDO O MOUSE REPOUSA SOBRE O OBJETO */
 .cmp_manuscript_button:hover,
 .cmp_manuscript_button:focus,
 .block_make_submission a:hover,
@@ -3824,6 +3830,7 @@ body {
   font-size:1.285rem
  }
 }
+/* ALTERA A COR DE FUNDO DO MENU PRINCIPAL */
 @media (min-width:992px) {
  .pkp_navigation_primary_row {
   background:#ddd;
@@ -3844,10 +3851,12 @@ body {
  padding-bottom:6px;
  border-bottom-width:4px
 }
+/* ALTERA A COR DA LINHA INFERIOR QUANDO O MOUSE REPOUSA NO O TÍTULO DO MENU PRINCIPAL */
 #navigationPrimary>li>a:hover,
 #navigationPrimary>li>a:focus {
  border-color:#fe473c
 }
+/* ALTERA A COR DO TÍTULO MENU PRINCIPAL QUANDO O MOUSE ESTÁ SOB O OBJETO */
 #navigationPrimary>[aria-haspopup]>a:hover,
 #navigationPrimary>[aria-haspopup]>a:focus {
  border-color:transparent
@@ -3855,10 +3864,12 @@ body {
 #navigationPrimary [aria-expanded="true"]:before {
  border-bottom-color:#fe473c
 }
+/* ALTERA A COR DOS TÍTULOS DO MENU PRINCIPAL QUANDO*/
 @media (min-width:992px) {
  #navigationPrimary a {
   color:rgba(0,0,0,0.54)
  }
+/* ALTERA A COR DO TÍTULO DO MENU PRINCIPAL QUANDO O MOUSE ESTÁ SOB O OBJETO */
  #navigationPrimary a:hover,
  #navigationPrimary a:focus {
   color:#fe473c
@@ -3869,6 +3880,7 @@ body {
  #navigationPrimary ul a {
   color:rgba(240,240,240)
  }
+/* ALTERA A LINHA DA ESQUERDA DO SUBMENU QUANDO O MOUSE REPOUSA NO OBJETO */
  #navigationPrimary ul a:hover,
  #navigationPrimary ul a:focus {
   border-color:transparent
@@ -3922,6 +3934,7 @@ body {
   color:rgba(240,240,240)
  }
 }
+/* ALTERA AS CORES DA LINHA INFERIOR DOS TÍTULOS DA BARRA LATERAL */
 .pkp_block .title {
  display:inline-block;
  padding-bottom:0.5em;
