Versão gratuita e sem restrição de uso

--- a/ready-to-do/no-error.css
+++ b/ready-to-do/no-error.css
@@ -1,4 +1,5 @@
-/*! folha-de-estilo.css v1.4.8 | CC4.0 License | github.com/iKalamaZoo */html {
+/*! folha-de-estilo.css v1.4.9 | Mapeamento de script v0.1.5 | CC4.0 License | github.com/iKalamaZoo */
+html {
  line-height:1.15;
  -ms-text-size-adjust:100%;
  -webkit-text-size-adjust:100%
