--- a/ready-to-do/no-error.css
+++ b/ready-to-do/no-error.css
@@ -49,14 +49,9 @@ b,
 strong {
  font-weight:inherit
 }
-/* AJUSTA A COR DA LINHA INFERIOR DOS SUBTÍTULOS DO MENU SOBRE A REVISTA */
 b,
 strong {
  font-weight:bolder;
- padding-bottom: 0.5em;
- border-bottom: 3px solid #fe473c;
- font-weight: 700;
- text-transform: uppercase
 }
 code,
 kbd,
@@ -1634,7 +1629,7 @@ img {
 /* AJUSTA O ALINHAMENTO DO TÍTULO SOBRE A REVISTA */
 .pkp_structure_main .page h1 {
  margin-top:0;
- text-align: center;
+ text-align: left;
 }
 .pkp_structure_main .page>.cmp_edit_link {
  float:right;
