--- a/ready-to-do/no-error.css
+++ b/ready-to-do/no-error.css
@@ -1,4 +1,4 @@
-/*! folha-de-estilo.css v1.5.2 | mapeamento-de-código v0.1.7 | CC4.0 License | github.com/iKalamaZoo */
+/*! folha-de-estilo.css v1.5.3 | mapeamento-de-código v0.1.8 | CC4.0 License | github.com/iKalamaZoo */
 html {
  line-height:1.15;
  -ms-text-size-adjust:100%;
@@ -3682,7 +3682,7 @@ body {
  margin:0 auto;
  max-width:1160px;
  background:#fff;
- box-shadow:0 0 10px rgba(0,0,0,0.1);
+ box-shadow: 0px 0px 10px rgb(137, 142, 121);
  border-top-left-radius: 25px;
  border-top-right-radius: 25px;
 }
@@ -4106,9 +4106,12 @@ body {
 .obj_issue_toc .pages {
  font-family:"Montserrat",-apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen-Sans","Ubuntu","Cantarell","Helvetica Neue",sans-serif
 }
+/* ALTERA A SOMBRA PROJETADA NA IMAGEM DE CAPA DOS VOLUMES */
 .obj_issue_toc .cover img {
  margin-left:auto;
- margin-right:auto
+ margin-right:auto;
+ border-radius: 10px;
+ box-shadow: 5px 5px 2px #898e79
 }
 .obj_issue_summary .series {
  font-family:"Montserrat",-apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen-Sans","Ubuntu","Cantarell","Helvetica Neue",sans-serif
@@ -4230,11 +4233,14 @@ body {
  background:transparent;
  box-shadow:none
 }
+/* ALTERA A SOMBRA PROJETADA DA IMAGEM DE CADA DOS VOLUMES QUE APARECE NA PÁGINA DE CADA ARTIGO */
 .obj_article_details .entry_details .cover_image img {
  display:block;
  border-radius:3px;
  margin-left:auto;
- margin-right:auto
+ margin-right:auto;
+ border-radius: 10px;
+ box-shadow: 5px 5px 2px #898e79;
 }
 .obj_article_details .entry_details .item.galleys {
  box-shadow:none
