--- a/ready-to-do/no-error.css
+++ b/ready-to-do/no-error.css
@@ -1,4 +1,4 @@
-/*! folha-de-estilo.css v1.5.3 | mapeamento-de-código v0.1.9 | CC4.0 License | github.com/iKalamaZoo */
+/*! folha-de-estilo.css v1.5.3 | mapeamento-de-código v0.2.1 | CC4.0 License | github.com/iKalamaZoo */
 html {
  line-height:1.15;
  -ms-text-size-adjust:100%;
@@ -988,7 +988,7 @@ template {
 .cmp_table th {
  font-weight:700
 }
-/* ALTERA A COR DOS TÍTULOS DO VOLUME E AUTORIA DOS ARTIGOS */
+/*! ALTERA A COR DOS TÍTULOS DO VOLUME E AUTORIA DOS ARTIGOS */
 html,
 body {
  font-family:"Montserrat",-apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen-Sans","Ubuntu","Cantarell","Helvetica Neue",sans-serif;
@@ -1000,7 +1000,7 @@ body {
 a {
  color:#000
 }
-/* ALTERA A COR DOS TÍTULOS CLICÁVEIS QUANDO O MOURSE REPOUSA NO OBJETO */
+/*! ALTERA A COR DOS TÍTULOS CLICÁVEIS QUANDO O MOURSE REPOUSA NO OBJETO */
 a:hover,
 a:focus {
  color:#fe473c
@@ -1106,13 +1106,13 @@ a:focus {
   width:1160px
  }
 }
-/* AJUSTA O ALINHAMENTO DO RESUMO/ABSTRACT */
+/*! AJUSTA O ALINHAMENTO DO RESUMO/ABSTRACT */
 .abstract{
    text-align: justify;
    display: inline-block;
    color: #000
 }
-/* AJUSTA O ALINHAMENTO DA BIOGRAFIA DO(a) AUTOR(a) */
+/*! AJUSTA O ALINHAMENTO DA BIOGRAFIA DO(a) AUTOR(a) */
 .sub_item{
    text-align: justify;
 }
@@ -1184,7 +1184,7 @@ img {
  width:auto;
  height:auto
 }
-/* ALTERA A COR DE FUNDO E OS CANTOS ARREDONDADOS DA CAPA INTERIOR DO PAINEL SUPERIOR */
+/*! ALTERA A COR DE FUNDO E OS CANTOS ARREDONDADOS DA CAPA INTERIOR DO PAINEL SUPERIOR */
 .pkp_structure_head {
  background-color:#fe473c;
  border-bottom:1px solid #ddd;
@@ -1277,7 +1277,7 @@ img {
  color:rgba(0,0,0,0.84);
  text-decoration:none
 }
-/* ALTERA A COR DO TÍTULO DE BUSCA QUANDO O MOUSE REPOUSA NO OBJETO */
+/*! ALTERA A COR DO TÍTULO DE BUSCA QUANDO O MOUSE REPOUSA NO OBJETO */
 .pkp_site_nav_menu a:hover,
 .pkp_site_nav_menu a:focus {
  color:rgba(0,0,0,0.84);
@@ -1405,7 +1405,7 @@ img {
   border-left:.357rem solid transparent;
   color:#4b7d92
  }
- /* ALTERA A COR DE FUNDO QUANDO O MOUSE REPOUSA EM UM OBJETO DO SUBMENU */
+ /*! ALTERA A COR DE FUNDO QUANDO O MOUSE REPOUSA EM UM OBJETO DO SUBMENU */
  .pkp_nav_list ul a:hover,
  .pkp_nav_list ul a:focus {
   outline:0;
@@ -1626,7 +1626,7 @@ img {
 .pkp_structure_main p:last-child {
  margin-bottom:0
 }
-/* AJUSTA O ALINHAMENTO DO TÍTULO SOBRE A REVISTA */
+/*! AJUSTA O ALINHAMENTO DO TÍTULO SOBRE A REVISTA */
 .pkp_structure_main .page h1 {
  margin-top:0;
  text-align: left;
@@ -2061,7 +2061,7 @@ body.navIsOpen .siteHeader__navToggleIcon>span:last-child {
     font-size:16px;
     margin-right:0.25em
    }
-   /* ALTERA A COR DA LINHA INFERIOR DO TÍTULO DA BUSCA QUANDO O MOUSE REPOUSA NO OBJETO */
+   /*! ALTERA A COR DA LINHA INFERIOR DO TÍTULO DA BUSCA QUANDO O MOUSE REPOUSA NO OBJETO */
    .pkp_search_desktop .search_prompt:hover,
    .pkp_search_desktop .search_prompt:focus {
     outline:0;
@@ -3283,7 +3283,7 @@ body.navIsOpen .siteHeader__navToggleIcon>span:last-child {
  display:block;
  margin-bottom:1.43rem
 }
-/* ALTERA A SOMBRA PROJETADA DA IMAGEM DE CAPA DOS VOLUMES NA SEÇÃO EDIÇÕES ANTERIORES */
+/*! ALTERA A SOMBRA PROJETADA DA IMAGEM DE CAPA DOS VOLUMES NA SEÇÃO EDIÇÕES ANTERIORES */
 .obj_issue_summary .cover img {
  display:block;
  width:auto;
@@ -3409,7 +3409,7 @@ body.navIsOpen .siteHeader__navToggleIcon>span:last-child {
   width:100%;
   border-top:1px solid #ddd
  }
- /* ALTERA A COR DA FONTE DOS TÍTULOS DAS SEÇÕES DO VOLUME */
+ /*! ALTERA A COR DA FONTE DOS TÍTULOS DAS SEÇÕES DO VOLUME */
  .obj_issue_toc .galleys>h2,
  .obj_issue_toc .section>h2,
  .obj_issue_toc .galleys>h3,
@@ -3445,7 +3445,7 @@ body.navIsOpen .siteHeader__navToggleIcon>span:last-child {
  font-size:1rem;
  line-height:1.43rem
 }
-/* ALTERA A COR DOS TÍTULOS DA BARRA LATERAL */
+/*! ALTERA A COR DOS TÍTULOS DA BARRA LATERAL */
 .pkp_block .title {
  display:block;
  margin-bottom:.714rem;
@@ -3680,7 +3680,7 @@ html,
 body {
  background:#ddd
 }
-/* ALTERA A COR DE FUNDO DA PÁGINA, A COR PADRÃO DO TEXTO DA PÁGINA, OS CANTOS ARREDONDADOS DA PÁGINA E O TAMANHO DA PÁGINA */
+/*! ALTERA A COR DE FUNDO DA PÁGINA, A COR PADRÃO DO TEXTO DA PÁGINA, OS CANTOS ARREDONDADOS DA PÁGINA E O TAMANHO DA PÁGINA */
 .pkp_structure_page {
  margin:0 auto;
  max-width:1160px;
@@ -3736,7 +3736,7 @@ body {
   right:150px
  }
 }
-/* ALTERA A COR DO BOTÃO QUANDO O MOUSE NÃO REPOUSA SOBRE O OBJETO */
+/*! ALTERA A COR DO BOTÃO QUANDO O MOUSE NÃO REPOUSA SOBRE O OBJETO */
 .cmp_manuscript_button,
 .block_make_submission a,
 .obj_galley_link {
@@ -3747,7 +3747,7 @@ body {
  color:rgba(240,240,240);
  border:none
 }
-/* ALTERA A COR DO BOTÃO DE RÓTULO DE FORMATO DOS ARTIGOS QUANDO O MOUSE REPOUSA SOBRE O OBJETO */
+/*! ALTERA A COR DO BOTÃO DE RÓTULO DE FORMATO DOS ARTIGOS QUANDO O MOUSE REPOUSA SOBRE O OBJETO */
 .cmp_manuscript_button:hover,
 .cmp_manuscript_button:focus,
 .block_make_submission a:hover,
@@ -3825,7 +3825,7 @@ body {
  position:relative;
  padding-top:0
 }
-/* ALTERA A COR DE FUNDO E OS CANTOS ARREDONDADOS DA CAPA EXTERIOR DO PAINEL SUPERIOR */
+/*! ALTERA A COR DE FUNDO E OS CANTOS ARREDONDADOS DA CAPA EXTERIOR DO PAINEL SUPERIOR */
 .pkp_site_name_wrapper {
  background:#fe473c;
  border-top-left-radius: 25px;
@@ -3850,7 +3850,7 @@ body {
   font-size:1.285rem
  }
 }
-/* ALTERA A COR DE FUNDO DO MENU PRINCIPAL */
+/*! ALTERA A COR DE FUNDO DO MENU PRINCIPAL */
 @media (min-width:992px) {
  .pkp_navigation_primary_row {
   background:#ddd;
@@ -3871,12 +3871,12 @@ body {
  padding-bottom:6px;
  border-bottom-width:4px
 }
-/* ALTERA A COR DA LINHA INFERIOR QUANDO O MOUSE REPOUSA NO O TÍTULO DO MENU PRINCIPAL */
+/*! ALTERA A COR DA LINHA INFERIOR QUANDO O MOUSE REPOUSA NO O TÍTULO DO MENU PRINCIPAL */
 #navigationPrimary>li>a:hover,
 #navigationPrimary>li>a:focus {
  border-color:#fe473c
 }
-/* ALTERA A COR DO TÍTULO MENU PRINCIPAL QUANDO O MOUSE ESTÁ SOB O OBJETO */
+/*! ALTERA A COR DO TÍTULO MENU PRINCIPAL QUANDO O MOUSE ESTÁ SOB O OBJETO */
 #navigationPrimary>[aria-haspopup]>a:hover,
 #navigationPrimary>[aria-haspopup]>a:focus {
  border-color:transparent
@@ -3884,12 +3884,12 @@ body {
 #navigationPrimary [aria-expanded="true"]:before {
  border-bottom-color:#fe473c
 }
-/* ALTERA A COR DOS TÍTULOS DO MENU PRINCIPAL QUANDO*/
+/*! ALTERA A COR DOS TÍTULOS DO MENU PRINCIPAL QUANDO*/
 @media (min-width:992px) {
  #navigationPrimary a {
   color:rgba(0,0,0,0.54)
  }
-/* ALTERA A COR DO TÍTULO DO MENU PRINCIPAL QUANDO O MOUSE ESTÁ SOB O OBJETO */
+/*! ALTERA A COR DO TÍTULO DO MENU PRINCIPAL QUANDO O MOUSE ESTÁ SOB O OBJETO */
  #navigationPrimary a:hover,
  #navigationPrimary a:focus {
   color:#fe473c
@@ -3900,7 +3900,7 @@ body {
  #navigationPrimary ul a {
   color:rgba(240,240,240)
  }
-/* ALTERA A LINHA DA ESQUERDA DO SUBMENU QUANDO O MOUSE REPOUSA NO OBJETO */
+/*! ALTERA A LINHA DA ESQUERDA DO SUBMENU QUANDO O MOUSE REPOUSA NO OBJETO */
  #navigationPrimary ul a:hover,
  #navigationPrimary ul a:focus {
   border-color:transparent
@@ -3954,7 +3954,7 @@ body {
   color:rgba(240,240,240)
  }
 }
-/* ALTERA AS CORES DA LINHA INFERIOR DOS TÍTULOS DA BARRA LATERAL */
+/*! ALTERA AS CORES DA LINHA INFERIOR DOS TÍTULOS DA BARRA LATERAL */
 .pkp_block .title {
  display:inline-block;
  padding-bottom:0.5em;
@@ -4109,7 +4109,7 @@ body {
 .obj_issue_toc .pages {
  font-family:"Montserrat",-apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen-Sans","Ubuntu","Cantarell","Helvetica Neue",sans-serif
 }
-/* ALTERA A SOMBRA PROJETADA NA IMAGEM DE CAPA DOS VOLUMES */
+/*! ALTERA A SOMBRA PROJETADA NA IMAGEM DE CAPA DOS VOLUMES */
 .obj_issue_toc .cover img {
  margin-left:auto;
  margin-right:auto;
@@ -4236,7 +4236,7 @@ body {
  background:transparent;
  box-shadow:none
 }
-/* ALTERA A SOMBRA PROJETADA DA IMAGEM DE CADA DOS VOLUMES QUE APARECE NA PÁGINA DE CADA ARTIGO */
+/*! ALTERA A SOMBRA PROJETADA DA IMAGEM DE CADA DOS VOLUMES QUE APARECE NA PÁGINA DE CADA ARTIGO */
 .obj_article_details .entry_details .cover_image img {
  display:block;
  border-radius:3px;
@@ -4264,9 +4264,10 @@ body {
 .obj_article_details .entry_details .citation_display {
  margin-bottom:0
 }
+/*! ALTERA APENAS AS PROPRIEDADES O ITEM COPYRIGHT NA PÁGINA DE VISUALIZAÇÃO DE CADA ARTIGO */
 .obj_article_details .entry_details .item.copyright {
- background:transparent;
- box-shadow:none
+/*! background:transparent; */
+/*! box-shadow:none */
 }
 @media (min-width:768px) {
  .obj_article_details .entry_details {
@@ -4280,7 +4281,7 @@ body {
   right:auto;
   left:0
  }
- /* ALTERA A COR, A ESPESSURA E O POSICIONAMENTO DA BORDA LATERAL POSICIONADA À DIREITA */
+ /*! ALTERA A COR, A ESPESSURA E O POSICIONAMENTO DA BORDA LATERAL POSICIONADA À DIREITA */
  body[dir="rtl"] .pkp_structure_sidebar::before {
   right:auto;
   left:0;
