--- a/ready-to-do/no-error.css
+++ b/ready-to-do/no-error.css
@@ -1,4 +1,4 @@
-/*! folha-de-estilo.css v1.5.7 | mapeamento-de-código v0.2.5 | CC4.0 License | github.com/iKalamaZoo */
+/*! folha-de-estilo.css v1.5.9 | mapeamento-de-código v0.2.7 | CC4.0 License | github.com/iKalamaZoo */
 html {
  line-height:1.15;
  -ms-text-size-adjust:100%;
@@ -391,9 +391,9 @@ template {
  list-style:none
 }
 /*! CONFIGURA O ÍCONE PARA EXIBIR O DOI NA PÁGINA DOS ARTIGOS */
-.obj_article_details .item.doi .value:before {
+/*! .obj_article_details .item.doi .value:before {
    content: url('https://revistas.uece.br/public/site/images/frederico/doi.png')
-}
+} */
 .pkp_caret {
  content:' ';
  display:inline-block;
@@ -3088,6 +3088,12 @@ body.navIsOpen .siteHeader__navToggleIcon>span:last-child {
   display:inline;
   font-size:1rem
  }
+ /*! SUBSTITUI O NOME DOI PELO ÍCONE DO DOI NA PÁGINA DOS ARTIGOS */
+ .obj_article_details .item.doi .label {
+   display: flex;
+   margin-block-end: -3px;
+  content: url('https://revistas.uece.br/public/site/images/frederico/doi.png');  
+ }
  .obj_article_details .entry_details {
   float:left;
   width:300px;
@@ -3702,7 +3708,7 @@ body {
  margin:0 auto;
  max-width:1160px;
  background:#fff;
- box-shadow: 0px 0px 10px rgb(137, 142, 121);
+ box-shadow: 0px 0px 10px #222;
  border-top-left-radius: 25px;
  border-top-right-radius: 25px;
  border-bottom-left-radius: 15px;
@@ -4081,9 +4087,15 @@ body {
  text-decoration:underline
 }
 /*! CONFIGURA O ÍCONE QUE INDICA O DOI DO VOLUME NA SEÇÃO EDIÇÕES ANTERIORES */
-.obj_issue_toc .heading .pub_id:before {
+/*! .obj_issue_toc .heading .pub_id:before {
    content: url('https://revistas.uece.br/public/site/images/frederico/doi.png');
-  }
+  } */
+/*! SUBSTITUI O NOME DOI PELO ÍCONE DO DOI NA PÁGINA DOS VOLUMES */
+.obj_issue_toc .heading .pub_id .type{
+   margin-block-end: -4px;
+   margin-inline-end: -5px;
+   content: url('https://revistas.uece.br/public/site/images/frederico/doi.png')
+ }
 .obj_issue_toc .heading .pub_id,
 .obj_issue_toc .heading .published {
  font-family:"Montserrat",-apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen-Sans","Ubuntu","Cantarell","Helvetica Neue",sans-serif;
@@ -4179,10 +4191,12 @@ body {
 .obj_article_details .doi {
  font-family:"Montserrat",-apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen-Sans","Ubuntu","Cantarell","Helvetica Neue",sans-serif
 }
+/*! ALTERA O TAMANHO DA FONTE DO VALOR DO DOI NA PÁGINA DOS ARTIGOS */
 .obj_article_details .orcid a,
 .obj_article_details .doi a {
  color:rgba(0,0,0,0.87);
- text-decoration:none
+ text-decoration:none;
+ font-size: 12px;
 }
 .obj_article_details .orcid a:hover,
 .obj_article_details .doi a:hover,
@@ -4191,8 +4205,9 @@ body {
  color:#4b7d92;
  text-decoration:underline
 }
+/*! AJUSTA O TAMANHO DA FONTE DA DESCRIÇÃO DO ORCID NA PÁGINA DOS ARTIGOS */
 .obj_article_details .orcid a {
- font-size:10px;
+ font-size:12px;
  color:rgba(0,0,0,0.54)
 }
 .obj_article_details .authors li {
