--- a/ready-to-do/no-error.css
+++ b/ready-to-do/no-error.css
@@ -1,4 +1,4 @@
-/*! folha-de-estilo.css v1.6.2 | mapeamento-de-código v0.2.9 | CC4.0 License | github.com/iKalamaZoo */
+/*! folha-de-estilo.css v1.6.4 | mapeamento-de-código v0.3.1 | CC4.0 License | github.com/iKalamaZoo */
 html {
  line-height:1.15;
  -ms-text-size-adjust:100%;
@@ -4368,3 +4368,96 @@ body {
   border-right:1px solid #ddd
  }
 }
+
+ /* ==========================================================================
+                                 Animations
+   ========================================================================== */
+
+ /*! AJUSTA A ANIMAÇÃO DA IMAGEM DA PRE-VISUALIZAÇÃO DA NOTÍCIA PRINCIPAL DA REVISTA */
+ .summary img {
+	animation-duration: 0.75s;
+	animation-delay: 0.5s;
+	--DelayMultiplier: 1; 
+   animation-name: animate-slide;
+	animation-timing-function: cubic-bezier(.26,.53,.74,1.48);
+	animation-fill-mode: backwards;
+}
+
+/* Slide In */
+
+.animate.slide { animation-name: animate-slide; }
+
+@keyframes animate-slide {
+	0% {
+		opacity: 0;
+		transform: translate(0,20px);
+	}
+	
+	100% {
+		opacity: 1;
+		transform: translate(0,0);
+	}
+}
+
+/*! AJUSTA A ANIMAÇÃO DA IMAGEM DE CAPA DOS VOLUMES NA PÁGINA PRINCIPAL */
+   .obj_issue_toc .cover img {
+      animation-duration: 0.75s;
+      animation-delay: 0.5s;
+      --DelayMultiplier: 1; 
+      animation-name: animate-fade;
+      animation-timing-function: cubic-bezier(.26,.53,.74,1.48);
+      animation-fill-mode: backwards;
+   }
+   
+   /* Fade In */
+   .animate.fade {
+      animation-name: animate-fade;
+      animation-timing-function: ease;
+   }
+   
+   @keyframes animate-fade {
+      0% { opacity: 0; }
+      100% { opacity: 0.6; }
+   }
+   
+   /*! AJUSTA A ANIMAÇÃO DA IMAGEM DE CAPA DOS VOLUMES NA PÁGINA DOS ARTIGOS */
+   .obj_article_details .entry_details .cover_image img {
+      animation-duration: 0.75s;
+      animation-delay: 0.5s;
+      --DelayMultiplier: 1; 
+      animation-name: animate-fade;
+      animation-timing-function: cubic-bezier(.26,.53,.74,1.48);
+      animation-fill-mode: backwards;
+   }
+   
+   /* Fade In */
+   .animate.fade {
+      animation-name: animate-fade;
+      animation-timing-function: ease;
+   }
+   
+   @keyframes animate-fade {
+      0% { opacity: 0; }
+      100% { opacity: 0.6; }
+   }
+
+   /*! AJUSTA A ANIMAÇÃO DA IMAGEM DE CAPA DOS VOLUMES NA SEÇÃO EDIÇÕES ANTERIORES */
+   .obj_issue_summary .cover img {
+      animation-duration: 0.75s;
+      animation-delay: 0.5s;
+      --DelayMultiplier: 1; 
+      animation-name: animate-fade;
+      animation-timing-function: cubic-bezier(.26,.53,.74,1.48);
+      animation-fill-mode: backwards;
+   }
+   
+   /* Fade In */
+   .animate.fade {
+      animation-name: animate-fade;
+      animation-timing-function: ease;
+   }
+   
+   @keyframes animate-fade {
+      0% { opacity: 0; }
+      100% { opacity: 0.6; }
+   }
