--- a/ready-to-do/no-error.css
+++ b/ready-to-do/no-error.css
@@ -390,7 +390,7 @@ template {
    padding:0;
    list-style:none
 }
-/*! CONFIGURA O ÍCONE PARA EXIBIR O DOI NA PÁGINA DOS ARTIGOS */
+/*! CONFIGURA O ÍCONE PARA EXIBIR O DOI NA FRENTE DA DESCRIÇÃO DO DOI NA PÁGINA DOS ARTIGOS */
 /*! .obj_article_details .item.doi .value:before {
    content: url('https://revistas.uece.br/public/site/images/frederico/doi.png')
 } */
@@ -1004,7 +1004,7 @@ body {
 a {
    color:#000
 }
-/*! ALTERA A COR DOS TÍTULOS CLICÁVEIS QUANDO O MOURSE REPOUSA NO OBJETO */
+/*! ALTERA A COR DOS TÍTULOS CLICÁVEIS QUANDO O MOUSE REPOUSA NO OBJETO */
 a:hover,
 a:focus {
    color:#fe473c
@@ -1907,6 +1907,7 @@ body.navIsOpen .siteHeader__navToggleIcon>span:last-child {
    float:left;
    width:65%
  }
+ /*! AJUSA A COR DA LINHA DIVISÓRIA INFERIOR DIREITA DAS NOTÍCIAS EM DESTAQUE NA PÁGINA PRINCIPAL */
 .pkp_page_index .cmp_announcements>.obj_announcement_summary:before {
    content:' ';
    position:absolute;
@@ -1914,7 +1915,7 @@ body.navIsOpen .siteHeader__navToggleIcon>span:last-child {
    right:-1px;
    width:1px;
    height:100%;
-   border-left:1px solid #ddd
+   border-left:1px solid #fff
  }
 .pkp_page_index .cmp_announcements .more {
    float:right;
@@ -1922,6 +1923,7 @@ body.navIsOpen .siteHeader__navToggleIcon>span:last-child {
    padding-top:1.43rem;
    padding-bottom:1.43rem
  }
+ /*! AJUSTA A COR DA LINHA DIVISÓRIA SUPERIOR DIREITA DAS NOTÍCIAS EM DESTAQUE NA PÁGINA PRINCIPAL */
 .pkp_page_index .cmp_announcements .more:before {
    content:' ';
    position:absolute;
@@ -1929,7 +1931,7 @@ body.navIsOpen .siteHeader__navToggleIcon>span:last-child {
    left:0;
    width:1px;
    height:100%;
-   border-left:1px solid #ddd
+   border-left:1px solid #fff
  }
 }
 @media (min-width:992px) {
@@ -1980,9 +1982,10 @@ body.navIsOpen .siteHeader__navToggleIcon>span:last-child {
    margin-bottom:0
  }
 }
+/*! AJUSTA A COR DA LINHA DIVISÓRIA SUPERIOR DO RESUMO DA REVISTA LOCALIZADO ACIMA DO FOOTER */
 .pkp_page_index .additional_content {
    padding:2.143rem .714rem 0 .714rem;
-   border-top:1px solid #ddd
+   border-top:1px solid #fff
 }
 @media (min-width:480px) {
 .pkp_page_index .additional_content {
@@ -3747,6 +3750,7 @@ body {
 .pkp_structure_content {
    padding-top:0
 }
+/*! AJUSTA A COR DA LINHA DIVISÓRIA DA BARRA LATERAL */
 @media (min-width:992px) {
 .pkp_structure_sidebar:before {
    content:'';
@@ -3755,7 +3759,7 @@ body {
    right:0;
    bottom:0;
    width:300px;
-   border-left:1px solid #ddd
+   border-left:1px solid #fff
  }
 .pkp_structure_sidebar>* {
    position:relative
@@ -4041,9 +4045,10 @@ body {
    margin-bottom:0
  }
 }
+/*! AJUSTA A COR DA LINHA DIVISÓRIA INFERIOR DAS NOTÍCIAS EM DESTAQUE NA PÁGINA PRINCIPAL */
 @media (min-width:1200px) {
 .pkp_page_index .cmp_announcements {
-   border-bottom:1px solid #ddd
+   border-bottom:1px solid #fff
  }
 .pkp_page_index .cmp_announcements>.more:before,
 .pkp_page_index .cmp_announcements>.obj_announcement_summary:before {
